--- a/README
+++ b/README
@@ -1,4 +1,3 @@
-
 PigEditor
 
 
@@ -16,7 +15,7 @@ So I did a first version that works with Eclipse 3.6+
 http://www.eclipse.org/downloads/
 
 There is still a lot to improve and there are some false positive errors highlighted
-(trying to be in sync with Pig 0.9 for now), but feel free to send me your 
+(trying to be in sync with Pig 0.9 without Macros for now), but feel free to send me your 
 feedback/scripts/pull requests.
 
 For building:
