adding link to webpage

--- a/README
+++ b/README
@@ -1,5 +1,6 @@
 PigEditor
 
+Webpage: http://romainr.github.com/PigEditor/
 
 Have been using the nice lightweight Pig Eclipse plugin on http://wiki.apache.org/pig/PigTools 
 (and not so much the "heavy weight" PigPen) but was wondering if it was possible to do something 
