updating Pig compatibility

--- a/README
+++ b/README
@@ -16,12 +16,12 @@ So I did a first version that works with Eclipse 3.6+
 http://www.eclipse.org/downloads/
 
 There is still a lot to improve and there are some false positive errors highlighted
-(trying to be in sync with Pig 0.9 without Macros for now), but feel free to send me your 
+(trying to be in sync with Pig 0.10 without Macros and Python UDF for now), but feel free to send me your 
 feedback/scripts/pull requests.
 
 For building:
 Eclipse Helios 3.7 
-Xtext 2.0 http://www.eclipse.org/Xtext/
+Xtext 2.0+ http://www.eclipse.org/Xtext/
 
 Most important file is the Xtext grammar in org.apache.pigeditor/src: org.apache.pigeditor.Pig.xtext
 
