--- a/README
+++ b/README
@@ -2,7 +2,7 @@ PigEditor
 
 Webpage: http://romainr.github.com/PigEditor/
 
-Eclipse update site: http://youbills.com/site_media/updates/
+Eclipse update site: http://romainr.github.com/PigEditor/updates/ (shows 404 but works when adding it as a repository in Eclipse)
 
 Goal: I have been using the nice lightweight Pig Eclipse plugin on http://wiki.apache.org/pig/PigTools 
 (and not so much the "heavy weight" PigPen) but was wondering if it was possible to do something 
